--- a/users/templates/users/user.html
+++ b/users/templates/users/user.html
@@ -6,37 +6,54 @@
     <script src="/static/js/common.js"></script>
     <script src="/static/js/jquery-3.5.1.min.js"></script>
     <script>
-        $(function (){
-            $("#uname").blur(function (){
+        function checkuname(){
+            var ret = false;
             var xhr = createXhr();
-            xhr.open('get', '/user/chkname/?uname='+this.value, true);
+            xhr.open('get', '/user/chkname/?uname='+$("#uname").val(), false);
             xhr.onreadystatechange = function (){
                 if (xhr.readyState==4 && xhr.status==200){
-                    $("#uname-show").html(xhr.responseText);
+                    if (xhr.responseText == "1"){
+                        ret = true;
+                        $("#uname-show").html("username exist")
+                    }else {
+                        $("#uname-show").html("pass...")
+                    }
                 }
             }
             xhr.send(null)
+            return ret;
+        }
+        $(function (){
+            $("#uname").blur(function (){
+                checkuname();
             });
             $("#btnRegister").click(function (){
-                var xhr = createXhr();
-                var uname = $("#uname").val();
-                var upwd = $("#upwd").val();
-                var nickname = $("#nickname").val();
-                var url = "/user/reguser?uname="+uname+"&upwd="+upwd+"&nickname="+nickname;
-                xhr.open('get', url, true);
-                xhr.onreadystatechange = function (){
-                    if (xhr.readyState==4 && xhr.status==200){
-                        alert(xhr.responseText);
+                if(checkuname()){
+                    alert("username exist,can't register")
+                }else {
+                    var xhr = createXhr();
+                    xhr.open('post', '/user/reguser/', true);
+                    xhr.onreadystatechange = function (){
+                        if (xhr.readyState==4 && xhr.status==200){
+                            alert(xhr.responseText);
+                        }
                     }
-                }
-                xhr.send(null);
+                    xhr.setRequestHeader("Content-Type","application/x-www-form-urlencoded")
+                    var uname = $("#uname").val();
+                    var upwd = $("#upwd").val();
+                    var nickname = $("#nickname").val();
+                    var csrf = $("[name='csrfmiddlewaretoken']").val();
+                    var params = "uname="+uname+"&upwd="+upwd+"&nickname="+nickname+
+                        "&csrfmiddlewaretoken="+csrf;
+                    xhr.send(params);
+                };
             });
-        })
+        });
 
     </script>
 </head>
 <body>
-
+{% csrf_token %}
         <table>
             <tbody>
                 <tr>
